--- a/myawesomecliapp/manifest.json
+++ b/myawesomecliapp/manifest.json
@@ -1,8 +1,1 @@
-[
-  {
-    "name": "myawesomecliapp.phar",
-    "sha1": "8ed556e5e492d68f79a8faa99cfcef9305319518",
-    "url": "http://mattketmo.github.io/myawesomecliapp/downloads/myawesomecliapp-1.1.0.phar",
-    "version": "1.1.0"
-  }
-]
+[{"name":"myawesomecliapp.phar","sha1":"cd6e7d1e305aa3d7a05c92615530bc6036b37cbb","url":"http://mattketmo.github.io/myawesomecliapp/downloads/myawesomecliapp-1.2.0.phar","version":"1.2.0"}]
