--- a/myawesomecliapp/manifest.json
+++ b/myawesomecliapp/manifest.json
@@ -1,1 +1,1 @@
-[{"name":"myawesomecliapp.phar","sha1":"ff6a0d58bc4fc9b2afc6731cf0d3da8af0a4bcbc","url":"http://mattketmo.github.io/myawesomecliapp/downloads/myawesomecliapp-1.5.1.phar","version":"1.5.1"}]
+[{"name":"myawesomecliapp.phar","sha1":"4562863b0a00144e07c413d42c39cb0789c6a85b","url":"https://malotor.github.io/myawesomecliapp/downloads/myawesomecliapp-1.5.2.phar","version":"1.5.2"}]
