Create myawesomecliapp installer

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ permalink: /:title/
 analytics: 'UA-MYANALYTICS'
 disqus: mydisqus
 twitter: mloptor
-instagram: ~
-linkedin: manuellopeztorrent
+linkedin: in/manuellopeztorrent
 github: malotor
 email: malotor@gmail.com
 
